# recabs

./: Doxyfile  INSTALL.txt  README.txt  SConscript  recabs.h  recabs_dev.h
apps/binary-search/: CMakeLists.txt  bs_deserializer.h  l4_server_bs.cpp  main_fud_client.cpp  main_prototype.cpp
client/: by_size_result_sender.h  result_sender.cpp
common/: common.h  communication.h  recursive_functor.h  serializable_recursive_functor.h
distribution/fud/: CMakeLists.txt
distribution/fud/client/: fud_result_sender.cpp  fud_rprocessor.h
distribution/fud/server/: fud_rmanager.h
distribution/prototype/: CMakeLists.txt
distribution/prototype/client/: prototype_rp.h
distribution/prototype/server/: prototype_rm.cpp
doc/presentation/: 01-introduction.tex  02-recabs.tex  03-refactoring-fud.tex  04-conclusion.tex  biblio.bib  clean.sh  recabs_slides.tex
doc/proposal/: biblio.bib  propuesta_trabajo_final.tex
doc/responsibilities/: resp.tex
doc/thesis/: 01-introduction.tex  02-theoretical-background.tex  03-work-methodology.tex  04-about-recabs.tex  05-recabs-design.tex  06-implementation.tex  07-dummy-application.tex  08-projects-on-recabs.tex  09-redesign-problem.tex  10-redesign-solution.tex  11-redesign-external-dependencies.tex  12-conclusion.tex  13-future-work.tex  appendix-design-patterns.tex  appendix-fud-metrics.tex  appendix-recabs-metrics.tex  clean.sh  fsi.tex  recabs_thesis.tex
examples/binary-search/: SConscript
examples/binary-search/binary-search/: binary_search.h  bs_deserializer.h  l4_client_bs.h  l4_server_bs.h
examples/binary-search/binary-search/client/: bs_deserializer.h  l4_client_bs.h
examples/binary-search/binary-search/common/: binary_search.h
examples/binary-search/binary-search/server/: l4_server_bs.h
examples/binary-search/src/: binary_search.cpp  bs_deserializer.cpp  l4_client_bs.cpp  l4_server_bs.cpp  main_fud_client.cpp  main_fud_server.cpp  main_prototype.cpp
examples/binary-search/src/client/: bs_deserializer.cpp  l4_client_bs.cpp  main_client.cpp
examples/binary-search/src/common/: binary_search.cpp
examples/binary-search/src/server/: l4_server_bs.cpp  main_server.cpp
recabs/: recabs.h  recabs_dev.h
recabs/client/: by_size_result_sender.h  deserializer_functor.h  distributable_recursive_processor.h  distribution_policy.h  l4_client_app.h  recursive_processor.h  result_sender.h
recabs/client/fud/: fud_result_sender.h  fud_rprocessor.h
recabs/client/prototype/: prototype_rp.h
recabs/common/: common.h  communication.h  recursive_functor.h  serializable_recursive_functor.h
recabs/distribution/fud/client/: fud_result_sender.h  fud_rprocessor.h
recabs/distribution/fud/server/: fud_rmanager.h
recabs/distribution/prototype/client/: prototype_communication.h  prototype_rp.h
recabs/distribution/prototype/server/: prototype_rm.h
recabs/server/: l4_server_app.h  recursion_manager.h
recabs/server/fud/: fud_rmanager.h
recabs/server/prototype/: prototype_rm.h
server/: l4_server_app.h  recursion_manager.h
src/: CMakeLists.txt
src/client/: by_size_result_sender.cpp  distributable_recursive_processor.cpp  distribution_policy.cpp  result_sender.cpp
src/client/fud/: fud_result_sender.cpp  fud_rprocessor.cpp
src/client/prototype/: prototype_rp.cpp
src/distribution/: CMakeLists.txt
src/distribution/fud/: FindFud.cmake
src/distribution/fud/client/: fud_result_sender.cpp  fud_rprocessor.cpp
src/distribution/fud/server/: fud_rmanager.cpp
src/distribution/prototype/client/: prototype_communication.cpp  prototype_rp.cpp
src/distribution/prototype/server/: prototype_rm.cpp
src/server/: recursion_manager.cpp
src/server/fud/: fud_rmanager.cpp
src/server/prototype/: prototype_rm.cpp
